src/test/testcases/errors/p2_public/task_5/for_loop_err_3.ctx.mavl
function void main(){
    var int i;
    var int counter;
    i = 0;
    // nonbool test
    for (counter = 0; counter - 10; counter = counter + 1) {
        i = i + 1;
    }
}
